Switched all notebooks over to use data in the published form (as on Kaggle)

--- a/Jeffreson+LtU_24b/Fig10.ipynb
+++ b/Jeffreson+LtU_24b/Fig10.ipynb
@@ -92,36 +92,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rbin_centers, data_densities, data_PSFRs = [], [], []\n",
+    "props_3D = []\n",
     "for tag in tags:\n",
-    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR']\n",
-    "\n",
-    "    # weight from this array (temperature threshold here has no impact)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"Figs-10-11_*_T2.0e+04_avir2.0e+00.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_densities.append(props_3D)\n",
-    "\n",
-    "    # pressures, counts and SFRs from this array (respond to temperature threshold)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"pressures-SFRs-fixed-mp_*_T2.0e+04_avir2.0e+00.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_PSFRs.append(props_3D)\n",
-    "    \n",
-    "    # radial bin data from this array\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"Rbin_centers_*.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        Rbins = pickle.load(f)\n",
-    "    Rbin_centers.append(Rbins)"
+    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR'] # where your data is stored\n",
+    "    with open(str(filesavedir / \"props_3D_\") + tag + \".pkl\", \"rb\") as f:\n",
+    "        props_3D.append(pickle.load(f))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Force', 'ForceLeft', 'ForceRight', 'PtlMinIdcs', 'count', 'midplane-count', 'midplane-dens', 'SigmaH2Gas', 'SigmaGas', 'Kappa', 'Ptot', 'Ptherm', 'Pturb', 'SigmaSFR', 'Rbins'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(props_3D[0].keys())\n",
+    "Rbins = [props_3D_['Rbins'] for props_3D_ in props_3D] # separate out Rbins and delete\n",
+    "for props_3D_ in props_3D:\n",
+    "    del props_3D_['Rbins']\n",
+    "\n",
+    "for props_3D_ in props_3D: # delete PtlMinIdcs, as we do not need it here\n",
+    "    del props_3D_['PtlMinIdcs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -134,14 +141,14 @@
    ],
    "source": [
     "# fraction of points to take, to fit planes/lines with equal weighting for each galaxy\n",
-    "min_pts = min([len(elem) for elem in Rbin_centers])\n",
-    "divfacs = [int(np.rint(float(len(elem))/float(min_pts))) for elem in Rbin_centers]\n",
+    "min_pts = min([len(elem) for elem in Rbins])\n",
+    "divfacs = [int(np.rint(float(len(elem))/float(min_pts))) for elem in Rbins]\n",
     "print(divfacs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -162,29 +169,22 @@
     "# values do not make sense if averages/medians are taken over too few cells\n",
     "\n",
     "meddata, q1data, q4data = [], [], []\n",
-    "meddata_PSFRs, q1data_PSFRs, q4data_PSFRs = [], [], []\n",
-    "for i, Rmax_kpc, data_, data_PSFRs_ in zip(range(len(data_densities)), Rmaxs_kpc, data_densities, data_PSFRs):\n",
+    "for Rbins_, Rmax_kpc, props_3D_ in zip(Rbins, Rmaxs_kpc, props_3D):\n",
     "\n",
     "    # take cuts to deal with stochasticity of the SFR, and to ensure the mid-plane\n",
     "    # turbulent velocity dispersion is well-resolved\n",
-    "    cnd = (data_PSFRs_['midplane-count'] > THRESHOLD)\n",
-    "    for key, value in data_PSFRs_.items():\n",
-    "        value[~cnd] = np.nan\n",
-    "    for key, value in data_.items():\n",
+    "    cnd = (props_3D_['midplane-count'] > THRESHOLD)\n",
+    "    for key, value in props_3D_.items():\n",
     "        if key == 'Kappa':\n",
     "            continue\n",
     "        value[~cnd] = np.nan\n",
     "\n",
     "    # apply radial cut to disk extent for the ETGs\n",
-    "    cnd = (Rbin_centers[i]/ah.kpc_to_cm < Rmax_kpc)\n",
-    "    Rbin_centers[i] = Rbin_centers[i][cnd]\n",
-    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] if key != 'Kappa' else np.nanmedian(value, axis=1)[cnd] for key, value in data_.items()})\n",
-    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.25, axis=1)[cnd] for key, value in data_.items()})\n",
-    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.75, axis=1)[cnd] for key, value in data_.items()})\n",
-    "\n",
-    "    meddata_PSFRs.append({key: np.nanmedian(value, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q1data_PSFRs.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q4data_PSFRs.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})"
+    "    cnd = (Rbins_/ah.kpc_to_cm < Rmax_kpc)\n",
+    "    Rbins_ = Rbins_[cnd]\n",
+    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] if key != 'Kappa' else np.nanmedian(value, axis=1)[cnd] for key, value in props_3D_.items()})\n",
+    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.25, axis=1)[cnd] for key, value in props_3D_.items()})\n",
+    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.75, axis=1)[cnd] for key, value in props_3D_.items()})"
    ]
   },
   {
@@ -196,20 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_973671/3837053809.py:38: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
+      "/tmp/ipykernel_3285994/557200012.py:38: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
       "  ax0.dist = 12\n",
-      "/tmp/ipykernel_973671/3837053809.py:39: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
+      "/tmp/ipykernel_3285994/557200012.py:39: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
       "  ax1.dist = 12\n",
-      "/tmp/ipykernel_973671/3837053809.py:40: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
+      "/tmp/ipykernel_3285994/557200012.py:40: MatplotlibDeprecationWarning: The dist attribute was deprecated in Matplotlib 3.6 and will be removed two minor releases later.\n",
       "  ax2.dist = 12\n",
-      "/tmp/ipykernel_973671/2824081494.py:7: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "/tmp/ipykernel_3285994/2824081494.py:7: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  (a, b, c),resid,rank,s = np.linalg.lstsq(G, Z)\n"
      ]
@@ -284,15 +284,15 @@
     "Ptots, rhomps, kappas = [], [], []\n",
     "SFMS_Ptots, SFMS_rhomps, SFMS_kappas = [], [], []\n",
     "for ax in axs:\n",
-    "    for color, i, divfac in zip(colors, range(len(Rbin_centers)), divfacs):\n",
+    "    for color, i, divfac in zip(colors, range(len(Rbins)), divfacs):\n",
     "        ax.scatter3D(np.log10(meddata[i]['Kappa']), np.log10(meddata[i]['midplane-dens']/ah.mp_cgs),\n",
-    "                     np.log10(meddata_PSFRs[i]['Ptot']), s=50, lw=3, color=color, zorder=3)\n",
+    "                     np.log10(meddata[i]['Ptot']), s=50, lw=3, color=color, zorder=3)\n",
     "        if(i!=2): # not the quenched galaxy\n",
-    "            Ptots += list(meddata_PSFRs[i]['Ptot'][::divfac])\n",
+    "            Ptots += list(meddata[i]['Ptot'][::divfac])\n",
     "            rhomps += list(meddata[i]['midplane-dens'][::divfac])\n",
     "            kappas += list(meddata[i]['Kappa'][::divfac])\n",
     "        if(i>3):\n",
-    "            SFMS_Ptots += list(meddata_PSFRs[i]['Ptot'][::divfac])\n",
+    "            SFMS_Ptots += list(meddata[i]['Ptot'][::divfac])\n",
     "            SFMS_rhomps += list(meddata[i]['midplane-dens'][::divfac])\n",
     "            SFMS_kappas += list(meddata[i]['Kappa'][::divfac])\n",
     "\n",
