--- a/Jeffreson+LtU_24b/Fig11.ipynb
+++ b/Jeffreson+LtU_24b/Fig11.ipynb
@@ -81,32 +81,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rbin_centers, data_densities, data_PSFRs = [], [], []\n",
+    "props_3D = []\n",
     "for tag in tags:\n",
-    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR']\n",
-    "\n",
-    "    # weight from this array (temperature threshold here has no impact)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"Figs-10-11_*_T2.0e+04_avir2.0e+00.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_densities.append(props_3D)\n",
-    "\n",
-    "    # pressures, counts and SFRs from this array (respond to temperature threshold)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"pressures-SFRs-fixed-mp_*_T2.0e+04_avir2.0e+00.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_PSFRs.append(props_3D)\n",
-    "    \n",
-    "    # radial bin data from this array\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"Rbin_centers_*.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        Rbins = pickle.load(f)\n",
-    "    Rbin_centers.append(Rbins)"
+    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR'] # where your data is stored\n",
+    "    with open(str(filesavedir / \"props_3D_\") + tag + \".pkl\", \"rb\") as f:\n",
+    "        props_3D.append(pickle.load(f))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Force', 'ForceLeft', 'ForceRight', 'PtlMinIdcs', 'count', 'midplane-count', 'midplane-dens', 'SigmaH2Gas', 'SigmaGas', 'Kappa', 'Ptot', 'Ptherm', 'Pturb', 'SigmaSFR', 'Rbins'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(props_3D[0].keys())\n",
+    "Rbins = [props_3D_['Rbins'] for props_3D_ in props_3D] # separate out Rbins and delete\n",
+    "for props_3D_ in props_3D:\n",
+    "    del props_3D_['Rbins']\n",
+    "\n",
+    "for props_3D_ in props_3D: # delete PtlMinIdcs, as we do not need it here\n",
+    "    del props_3D_['PtlMinIdcs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -127,29 +134,22 @@
     "# values do not make sense if averages/medians are taken over too few cells\n",
     "\n",
     "meddata, q1data, q4data = [], [], []\n",
-    "meddata_PSFRs, q1data_PSFRs, q4data_PSFRs = [], [], []\n",
-    "for i, Rmax_kpc, data_, data_PSFRs_ in zip(range(len(data_densities)), Rmaxs_kpc, data_densities, data_PSFRs):\n",
+    "for Rmax_kpc, Rbins_, props_3D_ in zip(Rmaxs_kpc, Rbins, props_3D):\n",
     "\n",
     "    # take cuts to deal with stochasticity of the SFR, and to ensure the mid-plane\n",
     "    # turbulent velocity dispersion is well-resolved\n",
-    "    cnd = (data_PSFRs_['midplane-count'] > THRESHOLD)\n",
-    "    for key, value in data_PSFRs_.items():\n",
-    "        value[~cnd] = np.nan\n",
-    "    for key, value in data_.items():\n",
+    "    cnd = (props_3D_['midplane-count'] > THRESHOLD)\n",
+    "    for key, value in props_3D_.items():\n",
     "        if key == 'Kappa':\n",
     "            continue\n",
     "        value[~cnd] = np.nan\n",
     "\n",
     "    # apply radial cut to disk extent for the ETGs\n",
-    "    cnd = (Rbin_centers[i]/ah.kpc_to_cm < Rmax_kpc)\n",
-    "    Rbin_centers[i] = Rbin_centers[i][cnd]\n",
-    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] if key != 'Kappa' else np.nanmedian(value, axis=1) for key, value in data_.items()})\n",
-    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.25, axis=1) for key, value in data_.items()})\n",
-    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.75, axis=1) for key, value in data_.items()})\n",
-    "\n",
-    "    meddata_PSFRs.append({key: np.nanmedian(value, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q1data_PSFRs.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q4data_PSFRs.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})"
+    "    cnd = (Rbins_/ah.kpc_to_cm < Rmax_kpc)\n",
+    "    Rbins_ = Rbins_[cnd]\n",
+    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] if key != 'Kappa' else np.nanmedian(value, axis=1) for key, value in props_3D_.items()})\n",
+    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.25, axis=1) for key, value in props_3D_.items()})\n",
+    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.75, axis=1) for key, value in props_3D_.items()})"
    ]
   },
   {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,28 +269,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_971704/751081368.py:32: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ax0.scatter(np.log10(meddata[i]['SigmaGas']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-      "/tmp/ipykernel_971704/751081368.py:33: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ax0.scatter(np.log10(meddata[i]['SigmaGas']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
-      "/tmp/ipykernel_971704/751081368.py:46: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ax1.scatter(np.log10(meddata[i]['SigmaH2Gas']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-      "/tmp/ipykernel_971704/751081368.py:47: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ax1.scatter(np.log10(meddata[i]['SigmaH2Gas']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
-      "/tmp/ipykernel_971704/751081368.py:61: UserWarning: linewidths is ignored by contourf\n",
+      "/tmp/ipykernel_3285927/261081675.py:32: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax0.scatter(np.log10(meddata[i]['SigmaGas']), np.log10(meddata[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
+      "/tmp/ipykernel_3285927/261081675.py:33: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax0.scatter(np.log10(meddata[i]['SigmaGas']), np.log10(meddata[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
+      "/tmp/ipykernel_3285927/261081675.py:46: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax1.scatter(np.log10(meddata[i]['SigmaH2Gas']), np.log10(meddata[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
+      "/tmp/ipykernel_3285927/261081675.py:47: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax1.scatter(np.log10(meddata[i]['SigmaH2Gas']), np.log10(meddata[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
+      "/tmp/ipykernel_3285927/261081675.py:61: UserWarning: linewidths is ignored by contourf\n",
       "  ax0.contourf(denHIH2_normalized, [fHIH2(0.95), 1], linewidths=2., colors=[plt.cm.Set2(2)], linestyles='dotted',\n",
-      "/tmp/ipykernel_971704/751081368.py:63: UserWarning: linewidths is ignored by contourf\n",
+      "/tmp/ipykernel_3285927/261081675.py:63: UserWarning: linewidths is ignored by contourf\n",
       "  ax0.contourf(denHIH2_normalized, [fHIH2(0.8), 1], linewidths=2., colors=[plt.cm.Set2(2)], linestyles='dashed',\n",
-      "/tmp/ipykernel_971704/751081368.py:65: UserWarning: linewidths is ignored by contourf\n",
+      "/tmp/ipykernel_3285927/261081675.py:65: UserWarning: linewidths is ignored by contourf\n",
       "  ax0.contourf(denHIH2_normalized, [fHIH2(0.4), 1], linewidths=2., colors=[plt.cm.Set2(2)], linestyles='solid',\n",
-      "/tmp/ipykernel_971704/751081368.py:69: RuntimeWarning: divide by zero encountered in log10\n",
+      "/tmp/ipykernel_3285927/261081675.py:69: RuntimeWarning: divide by zero encountered in log10\n",
       "  density_contours.density_contour(np.log10(J23['Sigma-mol-S20']), np.log10(J23['Sigma-SFR-HaW4recal']),\n",
       "/n/home03/sjeffreson/GalactISM-analysis-PRFM/Jeffreson+LtU_24b/density_contours.py:277: UserWarning: The following kwargs were not used by contour: 'edgecolor'\n",
       "  contourfunc(\n"
@@ -338,32 +338,32 @@
     "\n",
     "# plot stuff\n",
     "# simulations\n",
-    "for color, i in zip(colors, range(len(Rbin_centers))):\n",
-    "    ax0.scatter(np.log10(meddata[i]['SigmaGas']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-    "    ax0.scatter(np.log10(meddata[i]['SigmaGas']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
+    "for color, i in zip(colors, range(len(Rbins))):\n",
+    "    ax0.scatter(np.log10(meddata[i]['SigmaGas']), np.log10(meddata[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
+    "    ax0.scatter(np.log10(meddata[i]['SigmaGas']), np.log10(meddata[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
     "\n",
     "    # one error bar\n",
-    "    ax0.vlines(np.log10(meddata[i]['SigmaGas'][-3]), np.log10(q1data_PSFRs[i]['SigmaSFR'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['SigmaSFR'][-3]), lw=3, color=color, zorder=3)\n",
-    "    ax0.vlines(np.log10(meddata[i]['SigmaGas'][-3]), np.log10(q1data_PSFRs[i]['SigmaSFR'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['SigmaSFR'][-3]), lw=7, color='white', zorder=2)\n",
-    "    ax0.hlines(np.log10(meddata_PSFRs[i]['SigmaSFR'][-3]), np.log10(q1data[i]['SigmaGas'][-3]),\n",
+    "    ax0.vlines(np.log10(meddata[i]['SigmaGas'][-3]), np.log10(q1data[i]['SigmaSFR'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['SigmaSFR'][-3]), lw=3, color=color, zorder=3)\n",
+    "    ax0.vlines(np.log10(meddata[i]['SigmaGas'][-3]), np.log10(q1data[i]['SigmaSFR'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['SigmaSFR'][-3]), lw=7, color='white', zorder=2)\n",
+    "    ax0.hlines(np.log10(meddata[i]['SigmaSFR'][-3]), np.log10(q1data[i]['SigmaGas'][-3]),\n",
     "               xmax=np.log10(q4data[i]['SigmaGas'][-3]), lw=3, color=color, zorder=3)\n",
-    "    ax0.hlines(np.log10(meddata_PSFRs[i]['SigmaSFR'][-3]), np.log10(q1data[i]['SigmaGas'][-3]),\n",
+    "    ax0.hlines(np.log10(meddata[i]['SigmaSFR'][-3]), np.log10(q1data[i]['SigmaGas'][-3]),\n",
     "               xmax=np.log10(q4data[i]['SigmaGas'][-3]), lw=7, color='white', zorder=2)\n",
     "\n",
-    "for color, i in zip(colors, range(len(Rbin_centers))):\n",
-    "    ax1.scatter(np.log10(meddata[i]['SigmaH2Gas']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-    "    ax1.scatter(np.log10(meddata[i]['SigmaH2Gas']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
+    "for color, i in zip(colors, range(len(Rbins))):\n",
+    "    ax1.scatter(np.log10(meddata[i]['SigmaH2Gas']), np.log10(meddata[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
+    "    ax1.scatter(np.log10(meddata[i]['SigmaH2Gas']), np.log10(meddata[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
     "\n",
     "    # one error bar\n",
-    "    ax1.vlines(np.log10(meddata[i]['SigmaH2Gas'][-3]), np.log10(q1data_PSFRs[i]['SigmaSFR'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['SigmaSFR'][-3]), lw=3, color=color, zorder=3)\n",
-    "    ax1.vlines(np.log10(meddata[i]['SigmaH2Gas'][-3]), np.log10(q1data_PSFRs[i]['SigmaSFR'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['SigmaSFR'][-3]), lw=7, color='white', zorder=2)\n",
-    "    ax1.hlines(np.log10(meddata_PSFRs[i]['SigmaSFR'][-3]), np.log10(q1data[i]['SigmaH2Gas'][-3]),\n",
+    "    ax1.vlines(np.log10(meddata[i]['SigmaH2Gas'][-3]), np.log10(q1data[i]['SigmaSFR'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['SigmaSFR'][-3]), lw=3, color=color, zorder=3)\n",
+    "    ax1.vlines(np.log10(meddata[i]['SigmaH2Gas'][-3]), np.log10(q1data[i]['SigmaSFR'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['SigmaSFR'][-3]), lw=7, color='white', zorder=2)\n",
+    "    ax1.hlines(np.log10(meddata[i]['SigmaSFR'][-3]), np.log10(q1data[i]['SigmaH2Gas'][-3]),\n",
     "               xmax=np.log10(q4data[i]['SigmaH2Gas'][-3]), lw=3, color=color, zorder=3)\n",
-    "    ax1.hlines(np.log10(meddata_PSFRs[i]['SigmaSFR'][-3]), np.log10(q1data[i]['SigmaH2Gas'][-3]),\n",
+    "    ax1.hlines(np.log10(meddata[i]['SigmaSFR'][-3]), np.log10(q1data[i]['SigmaH2Gas'][-3]),\n",
     "               xmax=np.log10(q4data[i]['SigmaH2Gas'][-3]), lw=7, color='white', zorder=2)\n",
     "\n",
     "# observations\n",
