--- a/Jeffreson+LtU_24b/Fig12.ipynb
+++ b/Jeffreson+LtU_24b/Fig12.ipynb
@@ -81,27 +81,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rbin_centers, data_weights, data_PSFRs = [], [], []\n",
+    "props_3D = []\n",
     "for tag in tags:\n",
-    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR']\n",
-    "\n",
-    "    # weight from this array (temperature threshold here has no impact)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"weights_*.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_weights.append(props_3D)\n",
-    "\n",
-    "    # pressures, counts and SFRs from this array (respond to temperature threshold)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"pressures-SFRs-fixed-mp_*_T2.0e+04_avir2.0e+00.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_PSFRs.append(props_3D)\n",
-    "    \n",
-    "    # radial bin data from this array\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"Rbin_centers_*.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        Rbins = pickle.load(f)\n",
-    "    Rbin_centers.append(Rbins)"
+    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR'] # where your data is stored\n",
+    "    with open(str(filesavedir / \"props_3D_\") + tag + \".pkl\", \"rb\") as f:\n",
+    "        props_3D.append(pickle.load(f))"
    ]
   },
   {
@@ -110,11 +94,32 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Force', 'ForceLeft', 'ForceRight', 'PtlMinIdcs', 'count', 'midplane-count', 'midplane-dens', 'SigmaH2Gas', 'SigmaGas', 'Kappa', 'Ptot', 'Ptherm', 'Pturb', 'SigmaSFR', 'Rbins'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(props_3D[0].keys())\n",
+    "Rbins = [props_3D_['Rbins'] for props_3D_ in props_3D] # separate out Rbins and delete\n",
+    "for props_3D_ in props_3D:\n",
+    "    del props_3D_['Rbins']\n",
+    "\n",
+    "for props_3D_ in props_3D: # delete PtlMinIdcs, as we do not need it here\n",
+    "    del props_3D_['PtlMinIdcs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/n/home03/sjeffreson/.conda/envs/jupyter_py3.8/lib/python3.8/site-packages/numpy/lib/nanfunctions.py:1095: RuntimeWarning: All-NaN slice encountered\n",
-      "  result = np.apply_along_axis(_nanmedian1d, axis, a, overwrite_input)\n",
       "/n/home03/sjeffreson/.conda/envs/jupyter_py3.8/lib/python3.8/site-packages/numpy/lib/nanfunctions.py:1577: RuntimeWarning: All-NaN slice encountered\n",
       "  result = np.apply_along_axis(_nanquantile_1d, axis, a, q,\n"
      ]
@@ -127,35 +132,28 @@
     "# values do not make sense if averages/medians are taken over too few cells\n",
     "\n",
     "meddata, q1data, q4data = [], [], []\n",
-    "meddata_PSFRs, q1data_PSFRs, q4data_PSFRs = [], [], []\n",
-    "for i, Rmax_kpc, data_, data_PSFRs_ in zip(range(len(data_weights)), Rmaxs_kpc, data_weights, data_PSFRs):\n",
+    "for Rmax_kpc, Rbins_, props_3D_ in zip(Rmaxs_kpc, Rbins, props_3D):\n",
     "    \n",
     "    # adjust the left-force and right-force to be absolute values\n",
-    "    data_['Force'] = np.fabs(data_['Force'])\n",
-    "    data_['ForceLeft'] = np.fabs(data_['ForceLeft'])\n",
-    "    data_['ForceRight'] = np.fabs(data_['ForceRight'])\n",
-    "    data_['ForceMin'] = np.minimum(data_['ForceLeft'], data_['ForceRight'])\n",
+    "    props_3D_['Force'] = np.fabs(props_3D_['Force'])\n",
+    "    props_3D_['ForceLeft'] = np.fabs(props_3D_['ForceLeft'])\n",
+    "    props_3D_['ForceRight'] = np.fabs(props_3D_['ForceRight'])\n",
+    "    props_3D_['ForceMin'] = np.minimum(props_3D_['ForceLeft'], props_3D_['ForceRight'])\n",
     "\n",
     "    # take cuts to deal with stochasticity of the SFR, and to ensure the mid-plane\n",
     "    # turbulent velocity dispersion is well-resolved\n",
-    "    cnd = (data_PSFRs_['midplane-count'] > THRESHOLD)\n",
-    "    for key, value in data_PSFRs_.items():\n",
-    "        value[~cnd] = np.nan\n",
-    "    for key, value in data_.items():\n",
-    "        if key == 'PtlMinIdcs':\n",
+    "    cnd = (props_3D_['midplane-count'] > THRESHOLD)\n",
+    "    for key, value in props_3D_.items():\n",
+    "        if key == 'Kappa':\n",
     "            continue\n",
     "        value[~cnd] = np.nan\n",
     "\n",
     "    # apply radial cut to disk extent for the ETGs\n",
-    "    cnd = (Rbin_centers[i]/ah.kpc_to_cm < Rmax_kpc)\n",
-    "    Rbin_centers[i] = Rbin_centers[i][cnd]\n",
-    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "\n",
-    "    meddata_PSFRs.append({key: np.nanmedian(value, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q1data_PSFRs.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q4data_PSFRs.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})"
+    "    cnd = (Rbins_/ah.kpc_to_cm < Rmax_kpc)\n",
+    "    Rbins_ = Rbins_[cnd]\n",
+    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] if key != 'Kappa' else np.nanmedian(value, axis=1) for key, value in props_3D_.items()})\n",
+    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.25, axis=1) for key, value in props_3D_.items()})\n",
+    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.75, axis=1) for key, value in props_3D_.items()})"
    ]
   },
   {
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,25 +489,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_972964/4124787816.py:28: RuntimeWarning: divide by zero encountered in log10\n",
+      "/tmp/ipykernel_3292967/1931785793.py:28: RuntimeWarning: divide by zero encountered in log10\n",
       "  density_contours.density_contour(np.log10(J23['P-DE-S20']), np.log10(J23['Sigma-SFR-HaW4recal']),\n",
       "/n/home03/sjeffreson/GalactISM-analysis-PRFM/Jeffreson+LtU_24b/density_contours.py:277: UserWarning: The following kwargs were not used by contour: 'edgecolor'\n",
       "  contourfunc(\n",
-      "/tmp/ipykernel_972964/4124787816.py:47: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ax0.scatter(np.log10(meddata_PSFRs[i]['Ptot']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-      "/tmp/ipykernel_972964/4124787816.py:48: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ax0.scatter(np.log10(meddata_PSFRs[i]['Ptot']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
-      "/tmp/ipykernel_972964/4124787816.py:61: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-      "/tmp/ipykernel_972964/4124787816.py:62: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n"
+      "/tmp/ipykernel_3292967/1931785793.py:47: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax0.scatter(np.log10(meddata[i]['Ptot']), np.log10(meddata[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
+      "/tmp/ipykernel_3292967/1931785793.py:48: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax0.scatter(np.log10(meddata[i]['Ptot']), np.log10(meddata[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
+      "/tmp/ipykernel_3292967/1931785793.py:61: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
+      "/tmp/ipykernel_3292967/1931785793.py:62: RuntimeWarning: divide by zero encountered in log10\n",
+      "  ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata[i]['SigmaSFR']), s=100, color='white', zorder=2)\n"
      ]
     },
     {
@@ -569,32 +567,32 @@
     "viridis_r_tiny._A = []\n",
     "\n",
     "# SIMULATIONS\n",
-    "for color, i in zip(colors[::-1], range(len(Rbin_centers))[::-1]):\n",
-    "    ax0.scatter(np.log10(meddata_PSFRs[i]['Ptot']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-    "    ax0.scatter(np.log10(meddata_PSFRs[i]['Ptot']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
+    "for color, i in zip(colors[::-1], range(len(Rbins))[::-1]):\n",
+    "    ax0.scatter(np.log10(meddata[i]['Ptot']), np.log10(meddata[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
+    "    ax0.scatter(np.log10(meddata[i]['Ptot']), np.log10(meddata[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
     "\n",
     "    # one error bar\n",
-    "    ax0.vlines(np.log10(meddata_PSFRs[i]['Ptot'][-3]), np.log10(q1data_PSFRs[i]['SigmaSFR'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['SigmaSFR'][-3]), lw=3, color=color, zorder=3)\n",
-    "    ax0.vlines(np.log10(meddata_PSFRs[i]['Ptot'][-3]), np.log10(q1data_PSFRs[i]['SigmaSFR'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['SigmaSFR'][-3]), lw=7, color='white', zorder=2)\n",
-    "    ax0.hlines(np.log10(meddata_PSFRs[i]['SigmaSFR'][-3]), np.log10(q1data_PSFRs[i]['Ptot'][-3]),\n",
-    "               xmax=np.log10(q4data_PSFRs[i]['Ptot'][-3]), lw=3, color=color, zorder=3)\n",
-    "    ax0.hlines(np.log10(meddata_PSFRs[i]['SigmaSFR'][-3]), np.log10(q1data_PSFRs[i]['Ptot'][-3]),\n",
-    "               xmax=np.log10(q4data_PSFRs[i]['Ptot'][-3]), lw=7, color='white', zorder=2)\n",
+    "    ax0.vlines(np.log10(meddata[i]['Ptot'][-3]), np.log10(q1data[i]['SigmaSFR'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['SigmaSFR'][-3]), lw=3, color=color, zorder=3)\n",
+    "    ax0.vlines(np.log10(meddata[i]['Ptot'][-3]), np.log10(q1data[i]['SigmaSFR'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['SigmaSFR'][-3]), lw=7, color='white', zorder=2)\n",
+    "    ax0.hlines(np.log10(meddata[i]['SigmaSFR'][-3]), np.log10(q1data[i]['Ptot'][-3]),\n",
+    "               xmax=np.log10(q4data[i]['Ptot'][-3]), lw=3, color=color, zorder=3)\n",
+    "    ax0.hlines(np.log10(meddata[i]['SigmaSFR'][-3]), np.log10(q1data[i]['Ptot'][-3]),\n",
+    "               xmax=np.log10(q4data[i]['Ptot'][-3]), lw=7, color='white', zorder=2)\n",
     "\n",
-    "for color, i in zip(colors[::-1], range(len(Rbin_centers))[::-1]):\n",
-    "    ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
-    "    ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata_PSFRs[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
+    "for color, i in zip(colors[::-1], range(len(Rbins))[::-1]):\n",
+    "    ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata[i]['SigmaSFR']), s=50, color=color, zorder=3)\n",
+    "    ax1.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata[i]['SigmaSFR']), s=100, color='white', zorder=2)\n",
     "\n",
     "    # one error bar\n",
-    "    ax1.vlines(np.log10(meddata[i]['Weight'][-3]), np.log10(q1data_PSFRs[i]['SigmaSFR'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['SigmaSFR'][-3]), lw=3, color=color, zorder=3)\n",
-    "    ax1.vlines(np.log10(meddata[i]['Weight'][-3]), np.log10(q1data_PSFRs[i]['SigmaSFR'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['SigmaSFR'][-3]), lw=7, color='white', zorder=2)\n",
-    "    ax1.hlines(np.log10(meddata_PSFRs[i]['SigmaSFR'][-3]), np.log10(q1data[i]['Weight'][-3]),\n",
+    "    ax1.vlines(np.log10(meddata[i]['Weight'][-3]), np.log10(q1data[i]['SigmaSFR'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['SigmaSFR'][-3]), lw=3, color=color, zorder=3)\n",
+    "    ax1.vlines(np.log10(meddata[i]['Weight'][-3]), np.log10(q1data[i]['SigmaSFR'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['SigmaSFR'][-3]), lw=7, color='white', zorder=2)\n",
+    "    ax1.hlines(np.log10(meddata[i]['SigmaSFR'][-3]), np.log10(q1data[i]['Weight'][-3]),\n",
     "               xmax=np.log10(q4data[i]['Weight'][-3]), lw=3, color=color, zorder=3)\n",
-    "    ax1.hlines(np.log10(meddata_PSFRs[i]['SigmaSFR'][-3]), np.log10(q1data[i]['Weight'][-3]),\n",
+    "    ax1.hlines(np.log10(meddata[i]['SigmaSFR'][-3]), np.log10(q1data[i]['Weight'][-3]),\n",
     "               xmax=np.log10(q4data[i]['Weight'][-3]), lw=7, color='white', zorder=2)\n",
     "\n",
     "# OBSERVATIONS AND COMPARISONS\n",
