--- a/Jeffreson+LtU_24b/Fig13.ipynb
+++ b/Jeffreson+LtU_24b/Fig13.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,36 +73,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rbin_centers, data_weights, data_PSFRs = [], [], []\n",
+    "props_3D = []\n",
     "for tag in tags:\n",
-    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR']\n",
-    "\n",
-    "    # weight from this array (temperature threshold here has no impact)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"weights_*.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_weights.append(props_3D)\n",
-    "\n",
-    "    # pressures, counts and SFRs from this array (respond to temperature threshold)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"pressures-SFRs-fixed-mp_*_T2.0e+04_avir2.0e+00.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_PSFRs.append(props_3D)\n",
-    "    \n",
-    "    # radial bin data from this array\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"Rbin_centers_*.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        Rbins = pickle.load(f)\n",
-    "    Rbin_centers.append(Rbins)"
+    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR'] # where your data is stored\n",
+    "    with open(str(filesavedir / \"props_3D_\") + tag + \".pkl\", \"rb\") as f:\n",
+    "        props_3D.append(pickle.load(f))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Force', 'ForceLeft', 'ForceRight', 'PtlMinIdcs', 'count', 'midplane-count', 'midplane-dens', 'SigmaH2Gas', 'SigmaGas', 'Kappa', 'Ptot', 'Ptherm', 'Pturb', 'SigmaSFR', 'Rbins'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(props_3D[0].keys())\n",
+    "Rbins = [props_3D_['Rbins'] for props_3D_ in props_3D] # separate out Rbins and delete\n",
+    "for props_3D_ in props_3D:\n",
+    "    del props_3D_['Rbins']\n",
+    "\n",
+    "for props_3D_ in props_3D: # delete PtlMinIdcs, as we do not need it here\n",
+    "    del props_3D_['PtlMinIdcs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -123,35 +130,28 @@
     "# values do not make sense if averages/medians are taken over too few cells\n",
     "\n",
     "meddata, q1data, q4data = [], [], []\n",
-    "meddata_PSFRs, q1data_PSFRs, q4data_PSFRs = [], [], []\n",
-    "for i, Rmax_kpc, data_, data_PSFRs_ in zip(range(len(data_weights)), Rmaxs_kpc, data_weights, data_PSFRs):\n",
+    "for i, Rmax_kpc, Rbins_, props_3D_ in zip(range(len(Rbins)), Rmaxs_kpc, Rbins, props_3D):\n",
     "    \n",
     "    # adjust the left-force and right-force to be absolute values\n",
-    "    data_['Force'] = np.fabs(data_['Force'])\n",
-    "    data_['ForceLeft'] = np.fabs(data_['ForceLeft'])\n",
-    "    data_['ForceRight'] = np.fabs(data_['ForceRight'])\n",
-    "    data_['ForceMin'] = np.minimum(data_['ForceLeft'], data_['ForceRight'])\n",
+    "    props_3D_['Force'] = np.fabs(props_3D_['Force'])\n",
+    "    props_3D_['ForceLeft'] = np.fabs(props_3D_['ForceLeft'])\n",
+    "    props_3D_['ForceRight'] = np.fabs(props_3D_['ForceRight'])\n",
+    "    props_3D_['ForceMin'] = np.minimum(props_3D_['ForceLeft'], props_3D_['ForceRight'])\n",
     "\n",
     "    # take cuts to deal with stochasticity of the SFR, and to ensure the mid-plane\n",
     "    # turbulent velocity dispersion is well-resolved\n",
-    "    cnd = (data_PSFRs_['midplane-count'] > THRESHOLD)\n",
-    "    for key, value in data_PSFRs_.items():\n",
-    "        value[~cnd] = np.nan\n",
-    "    for key, value in data_.items():\n",
-    "        if key == 'PtlMinIdcs':\n",
+    "    cnd = (props_3D_['midplane-count'] > THRESHOLD)\n",
+    "    for key, value in props_3D_.items():\n",
+    "        if key == 'Kappa':\n",
     "            continue\n",
     "        value[~cnd] = np.nan\n",
     "\n",
     "    # apply radial cut to disk extent for the ETGs\n",
-    "    cnd = (Rbin_centers[i]/ah.kpc_to_cm < Rmax_kpc)\n",
-    "    Rbin_centers[i] = Rbin_centers[i][cnd]\n",
-    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "\n",
-    "    meddata_PSFRs.append({key: np.nanmedian(value, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q1data_PSFRs.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q4data_PSFRs.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})"
+    "    cnd = (Rbins[i]/ah.kpc_to_cm < Rmax_kpc)\n",
+    "    Rbins[i] = Rbins[i][cnd]\n",
+    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] if key != 'Kappa' else np.nanmedian(value, axis=1) for key, value in props_3D_.items()})\n",
+    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.25, axis=1) for key, value in props_3D_.items()})\n",
+    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.75, axis=1) for key, value in props_3D_.items()})"
    ]
   },
   {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,15 +183,15 @@
     "Rmaxs = [1.5, 1.5, 1.5, 1.5, 13., 6.]\n",
     "Rbinnos = [int(np.rint((Rmax-Rmin)/(0.2))) for Rmin, Rmax in zip(Rmins, Rmaxs)]\n",
     "\n",
-    "Rbin_centers_indiv = []\n",
+    "Rbins_indiv = []\n",
     "for i in range(6):\n",
     "    Rbin_edges = np.linspace(Rmins[i], Rmaxs[i], Rbinnos[i]+1) * ah.kpc_to_cm\n",
-    "    Rbin_centers_indiv.append((Rbin_edges[1:]+Rbin_edges[:-1])/2.)"
+    "    Rbins_indiv.append((Rbin_edges[1:]+Rbin_edges[:-1])/2.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -380,32 +380,32 @@
     "\n",
     "### plot stuff\n",
     "# weight vs. pressure\n",
-    "for ax, color, i in zip(axs_mid, colors, range(len(Rbin_centers))):\n",
-    "    ax.plot(Rbin_centers[i]/ah.kpc_to_cm, meddata[i]['Weight'], color=color, lw=2)\n",
-    "    ax.fill_between(Rbin_centers[i]/ah.kpc_to_cm, q1data[i]['Weight'],\n",
+    "for ax, color, i in zip(axs_mid, colors, range(len(Rbins))):\n",
+    "    ax.plot(Rbins[i]/ah.kpc_to_cm, meddata[i]['Weight'], color=color, lw=2)\n",
+    "    ax.fill_between(Rbins[i]/ah.kpc_to_cm, q1data[i]['Weight'],\n",
     "                    y2=q4data[i]['Weight'], alpha=0.3, color=color)\n",
     "\n",
-    "    ax.plot(Rbin_centers[i]/ah.kpc_to_cm, meddata_PSFRs[i]['Ptot'], color=color, lw=2, ls='dashed')\n",
-    "    ax.fill_between(Rbin_centers[i]/ah.kpc_to_cm, q1data_PSFRs[i]['Ptot'], y2=q4data_PSFRs[i]['Ptot'], alpha=0.3, color=color)\n",
+    "    ax.plot(Rbins[i]/ah.kpc_to_cm, meddata[i]['Ptot'], color=color, lw=2, ls='dashed')\n",
+    "    ax.fill_between(Rbins[i]/ah.kpc_to_cm, q1data[i]['Ptot'], y2=q4data[i]['Ptot'], alpha=0.3, color=color)\n",
     "\n",
     "    if i<4:\n",
-    "        ax.plot(Rbin_centers[i]/ah.kpc_to_cm, meddata_PSFRs[i]['Ptherm']*ah.kB_cgs, color=color, lw=1)\n",
-    "        ax.fill_between(Rbin_centers[i]/ah.kpc_to_cm, q1data_PSFRs[i]['Ptherm']*ah.kB_cgs, y2=q4data_PSFRs[i]['Ptherm']*ah.kB_cgs, alpha=0.3, color=color)\n",
+    "        ax.plot(Rbins[i]/ah.kpc_to_cm, meddata[i]['Ptherm']*ah.kB_cgs, color=color, lw=1)\n",
+    "        ax.fill_between(Rbins[i]/ah.kpc_to_cm, q1data[i]['Ptherm']*ah.kB_cgs, y2=q4data[i]['Ptherm']*ah.kB_cgs, alpha=0.3, color=color)\n",
     "    else:\n",
-    "        ax.plot(Rbin_centers[i]/ah.kpc_to_cm, meddata_PSFRs[i]['Ptherm'], color=color, lw=1)\n",
-    "        ax.fill_between(Rbin_centers[i]/ah.kpc_to_cm, q1data_PSFRs[i]['Ptherm'], y2=q4data_PSFRs[i]['Ptherm'], alpha=0.3, color=color)\n",
+    "        ax.plot(Rbins[i]/ah.kpc_to_cm, meddata[i]['Ptherm'], color=color, lw=1)\n",
+    "        ax.fill_between(Rbins[i]/ah.kpc_to_cm, q1data[i]['Ptherm'], y2=q4data[i]['Ptherm'], alpha=0.3, color=color)\n",
     "    \n",
     "# pressure vs. SFR\n",
-    "for ax, color, i in zip(axs_bot, colors, range(len(Rbin_centers))):\n",
+    "for ax, color, i in zip(axs_bot, colors, range(len(Rbins))):\n",
     "    \n",
     "    # SFRs\n",
-    "    ax.plot(Rbin_centers[i] / ah.kpc_to_cm, meddata_PSFRs[i]['SigmaSFR'], color=color, lw=2, ls='dotted')\n",
-    "    ax.fill_between(Rbin_centers[i] / ah.kpc_to_cm, q1data_PSFRs[i]['SigmaSFR'], y2=q4data_PSFRs[i]['SigmaSFR'], alpha=0.3, color=color)\n",
+    "    ax.plot(Rbins[i] / ah.kpc_to_cm, meddata[i]['SigmaSFR'], color=color, lw=2, ls='dotted')\n",
+    "    ax.fill_between(Rbins[i] / ah.kpc_to_cm, q1data[i]['SigmaSFR'], y2=q4data[i]['SigmaSFR'], alpha=0.3, color=color)\n",
     "\n",
     "    # pressures via Equation 6 of Jeffreson et al. 2024b\n",
-    "    ax.plot(Rbin_centers[i] / ah.kpc_to_cm, 10.**(-7.86) * meddata[i]['Weight']**1.235,\n",
+    "    ax.plot(Rbins[i] / ah.kpc_to_cm, 10.**(-7.86) * meddata[i]['Weight']**1.235,\n",
     "            color=color, lw=2, label='total')\n",
-    "    ax.fill_between(Rbin_centers[i] / ah.kpc_to_cm,\n",
+    "    ax.fill_between(Rbins[i] / ah.kpc_to_cm,\n",
     "                    10.**(-7.86) * q1data[i]['Weight']**1.235, y2=10.**(-7.86) * q4data[i]['Weight']**1.235,\n",
     "                    alpha=0.3, color=color)\n",
     "\n",
@@ -413,12 +413,12 @@
     "linestyles = ['-', 'dotted', 'dashed', '-.']\n",
     "linewidths = [1, 1, 1, 2]\n",
     "weight_labels = ['gas', 'dark matter', 'disk', 'bulge']\n",
-    "for ax, i in zip(axs_top, range(len(Rbin_centers_indiv))):\n",
+    "for ax, i in zip(axs_top, range(len(Rbins_indiv))):\n",
     "    for key, ls, lw, weight_label in zip(meddata[i]['WeightIndiv'].keys(), linestyles, linewidths, weight_labels):\n",
     "        if i==4:\n",
-    "            ax.plot(Rbin_centers_indiv[i]/ah.kpc_to_cm, meddata[i]['WeightIndiv'][key], ls=ls, lw=lw, color='k', label=weight_label)\n",
+    "            ax.plot(Rbins_indiv[i]/ah.kpc_to_cm, meddata[i]['WeightIndiv'][key], ls=ls, lw=lw, color='k', label=weight_label)\n",
     "        else:\n",
-    "            ax.plot(Rbin_centers_indiv[i]/ah.kpc_to_cm, meddata[i]['WeightIndiv'][key], ls=ls, lw=lw, color='k')\n",
+    "            ax.plot(Rbins_indiv[i]/ah.kpc_to_cm, meddata[i]['WeightIndiv'][key], ls=ls, lw=lw, color='k')\n",
     "\n",
     "# annotations\n",
     "axs_top[0].annotate(\"one time\", xy=(0.9, 0.825), xycoords='axes fraction', ha='right')\n",
