--- a/Jeffreson+LtU_24b/Fig14.ipynb
+++ b/Jeffreson+LtU_24b/Fig14.ipynb
@@ -74,32 +74,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rbin_centers, data_weights, data_PSFRs = [], [], []\n",
+    "props_3D = []\n",
     "for tag in tags:\n",
-    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR']\n",
-    "\n",
-    "    # weight from this array (temperature threshold here has no impact)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"weights_*.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_weights.append(props_3D)\n",
-    "\n",
-    "    # pressures, counts and SFRs from this array (respond to temperature threshold)\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"pressures-SFRs-fixed-mp_*_T2.0e+04_avir2.0e+00.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        props_3D = pickle.load(f)\n",
-    "    data_PSFRs.append(props_3D)\n",
-    "    \n",
-    "    # radial bin data from this array\n",
-    "    filesavename = min(glob.glob(str(filesavedir / \"Rbin_centers_*.pkl\")))\n",
-    "    with open(filesavename, \"rb\") as f:\n",
-    "        Rbins = pickle.load(f)\n",
-    "    Rbin_centers.append(Rbins)"
+    "    filesavedir = Path(config[tag]['ROOT_DIR']) / config[tag]['SUBDIR'] # where your data is stored\n",
+    "    with open(str(filesavedir / \"props_3D_\") + tag + \".pkl\", \"rb\") as f:\n",
+    "        props_3D.append(pickle.load(f))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Force', 'ForceLeft', 'ForceRight', 'PtlMinIdcs', 'count', 'midplane-count', 'midplane-dens', 'SigmaH2Gas', 'SigmaGas', 'Kappa', 'Ptot', 'Ptherm', 'Pturb', 'SigmaSFR', 'Rbins'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(props_3D[0].keys())\n",
+    "Rbins = [props_3D_['Rbins'] for props_3D_ in props_3D] # separate out Rbins and delete\n",
+    "for props_3D_ in props_3D:\n",
+    "    del props_3D_['Rbins']\n",
+    "\n",
+    "for props_3D_ in props_3D: # delete PtlMinIdcs, as we do not need it here\n",
+    "    del props_3D_['PtlMinIdcs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,35 +127,28 @@
     "# values do not make sense if averages/medians are taken over too few cells\n",
     "\n",
     "meddata, q1data, q4data = [], [], []\n",
-    "meddata_PSFRs, q1data_PSFRs, q4data_PSFRs = [], [], []\n",
-    "for i, Rmax_kpc, data_, data_PSFRs_ in zip(range(len(data_weights)), Rmaxs_kpc, data_weights, data_PSFRs):\n",
+    "for Rmax_kpc, Rbins_, props_3D_ in zip(Rmaxs_kpc, Rbins, props_3D):\n",
     "    \n",
     "    # adjust the left-force and right-force to be absolute values\n",
-    "    data_['Force'] = np.fabs(data_['Force'])\n",
-    "    data_['ForceLeft'] = np.fabs(data_['ForceLeft'])\n",
-    "    data_['ForceRight'] = np.fabs(data_['ForceRight'])\n",
-    "    data_['ForceMin'] = np.minimum(data_['ForceLeft'], data_['ForceRight'])\n",
+    "    props_3D_['Force'] = np.fabs(props_3D_['Force'])\n",
+    "    props_3D_['ForceLeft'] = np.fabs(props_3D_['ForceLeft'])\n",
+    "    props_3D_['ForceRight'] = np.fabs(props_3D_['ForceRight'])\n",
+    "    props_3D_['ForceMin'] = np.minimum(props_3D_['ForceLeft'], props_3D_['ForceRight'])\n",
     "\n",
     "    # take cuts to deal with stochasticity of the SFR, and to ensure the mid-plane\n",
     "    # turbulent velocity dispersion is well-resolved\n",
-    "    cnd = (data_PSFRs_['midplane-count'] > THRESHOLD)\n",
-    "    for key, value in data_PSFRs_.items():\n",
-    "        value[~cnd] = np.nan\n",
-    "    for key, value in data_.items():\n",
-    "        if key == 'PtlMinIdcs':\n",
+    "    cnd = (props_3D_['midplane-count'] > THRESHOLD)\n",
+    "    for key, value in props_3D_.items():\n",
+    "        if key == 'Kappa':\n",
     "            continue\n",
     "        value[~cnd] = np.nan\n",
     "\n",
     "    # apply radial cut to disk extent for the ETGs\n",
-    "    cnd = (Rbin_centers[i]/ah.kpc_to_cm < Rmax_kpc)\n",
-    "    Rbin_centers[i] = Rbin_centers[i][cnd]\n",
-    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] for key, value in data_.items()})\n",
-    "\n",
-    "    meddata_PSFRs.append({key: np.nanmedian(value, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q1data_PSFRs.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})\n",
-    "    q4data_PSFRs.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] for key, value in data_PSFRs_.items()})"
+    "    cnd = (Rbins_/ah.kpc_to_cm < Rmax_kpc)\n",
+    "    Rbins_ = Rbins_[cnd]\n",
+    "    meddata.append({key: np.nanmedian(value, axis=(1,2))[cnd] if key != 'Kappa' else np.nanmedian(value, axis=1) for key, value in props_3D_.items()})\n",
+    "    q1data.append({key: np.nanquantile(value, 0.25, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.25, axis=1) for key, value in props_3D_.items()})\n",
+    "    q4data.append({key: np.nanquantile(value, 0.75, axis=(1,2))[cnd] if key != 'Kappa' else np.nanquantile(value, 0.75, axis=1) for key, value in props_3D_.items()})"
    ]
   },
   {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -227,21 +227,21 @@
     "\n",
     "# plot stuff\n",
     "# SIMULATIONS\n",
-    "for color, i in zip(colors[::-1], range(len(Rbin_centers))[::-1]):\n",
+    "for color, i in zip(colors[::-1], range(len(Rbins))[::-1]):\n",
     "    # one error bar\n",
-    "    ax0.hlines(np.log10(meddata_PSFRs[i]['Ptot'][-3]), np.log10(q1data[i]['Weight'][-3]),\n",
+    "    ax0.hlines(np.log10(meddata[i]['Ptot'][-3]), np.log10(q1data[i]['Weight'][-3]),\n",
     "               xmax=np.log10(q4data[i]['Weight'][-3]), lw=7, color='white', zorder=0)\n",
-    "    ax0.hlines(np.log10(meddata_PSFRs[i]['Ptot'][-3]), np.log10(q1data[i]['Weight'][-3]),\n",
+    "    ax0.hlines(np.log10(meddata[i]['Ptot'][-3]), np.log10(q1data[i]['Weight'][-3]),\n",
     "               xmax=np.log10(q4data[i]['Weight'][-3]), lw=3, color=color, zorder=0)\n",
     "    \n",
-    "    ax0.vlines(np.log10(meddata[i]['Weight'][-3]), np.log10(q1data_PSFRs[i]['Ptot'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['Ptot'][-3]), lw=7, color='white', zorder=0)\n",
-    "    ax0.vlines(np.log10(meddata[i]['Weight'][-3]), np.log10(q1data_PSFRs[i]['Ptot'][-3]),\n",
-    "               ymax=np.log10(q4data_PSFRs[i]['Ptot'][-3]), lw=3, color=color, zorder=0)\n",
+    "    ax0.vlines(np.log10(meddata[i]['Weight'][-3]), np.log10(q1data[i]['Ptot'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['Ptot'][-3]), lw=7, color='white', zorder=0)\n",
+    "    ax0.vlines(np.log10(meddata[i]['Weight'][-3]), np.log10(q1data[i]['Ptot'][-3]),\n",
+    "               ymax=np.log10(q4data[i]['Ptot'][-3]), lw=3, color=color, zorder=0)\n",
     "\n",
-    "for color, i in zip(colors[::-1], range(len(Rbin_centers))[::-1]):\n",
-    "    ax0.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata_PSFRs[i]['Ptot']), s=100, color='white', zorder=1)\n",
-    "    ax0.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata_PSFRs[i]['Ptot']), s=50, color=color, zorder=1)\n",
+    "for color, i in zip(colors[::-1], range(len(Rbins))[::-1]):\n",
+    "    ax0.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata[i]['Ptot']), s=100, color='white', zorder=1)\n",
+    "    ax0.scatter(np.log10(meddata[i]['Weight']), np.log10(meddata[i]['Ptot']), s=50, color=color, zorder=1)\n",
     "\n",
     "ax0.plot(np.linspace(2.4, 6., 100), np.linspace(2.4, 6, 100), lw=1.5, ls='dashed', color='k')\n",
     "\n",
